--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -5,10 +5,11 @@ PROJECT(scripts)
 FILE(GLOB allscripts *)
 FOREACH(script ${allscripts} )
   GET_FILENAME_COMPONENT(scriptname ${script} NAME)
-  STRING(COMPARE NOTEQUAL ${scriptname} "CMakeLists.txt" testvar)
-  IF( ${testvar} )
+  STRING(COMPARE NOTEQUAL ${scriptname} "CMakeLists.txt" testvar1)
+  STRING(COMPARE NOTEQUAL ${scriptname} "CVS" testvar2)
+  IF( ${testvar1} AND ${testvar2}  )
     INSTALL_PROGRAMS(/. ${scriptname} )
-  ENDIF( ${testvar} )
+  ENDIF( ${testvar1} AND ${testvar2}  )
 ENDFOREACH(script)
 
 
