--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ PROJECT(praxix)
 SUBDIRS(
  andimagefilter
  andnotimagefilter
+ averagevectormagnitude
  castconvert
  computedifferenceimage
  computedifferenceimageBIG
