--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ SUBDIRS(
  cropimage
  dilateimage
  erodeimage
+ extracteveryotherslice
  extractindexfromvectorimage
  extractslice
  getpointsinimage
