--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,8 @@ SUBDIRS(
  invertintensityimagefilter
  maximumimagefilter
  minimumimagefilter
+ morphologicalclosingimage
+ morphologicalopeningimage
  multiplypixelimagefilter
  rescaleintensityimagefilter
  resizeimage
