--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -37,6 +37,7 @@ SUBDIRS(
  minimumimagefilter
  morphologicalclosingimage
  morphologicalopeningimage
+ multiplyimages
  multiplypixelimagefilter
  rescaleintensityimagefilter
  resizeimage
