--- a/src/statisticsonimage/CMakeLists.txt
+++ b/src/statisticsonimage/CMakeLists.txt
@@ -10,9 +10,16 @@ ELSE(ITK_FOUND)
           "Cannot build without ITK.  Please set ITK_DIR.")
 ENDIF(ITK_FOUND)
 
-ADD_EXECUTABLE(pxstatisticsonimage statisticsonimage.cxx)
+ADD_EXECUTABLE(pxstatisticsonimage
+  statisticsonimage.cxx
+  statisticsonimage.h
+  itkStatisticsImageFilterWithMask.h
+  itkStatisticsImageFilterWithMask.txx
+  itkScalarImageToHistogramGenerator2.h
+  itkScalarImageToHistogramGenerator2.txx
+  statisticsprinters.h)
 
-TARGET_LINK_LIBRARIES(pxstatisticsonimage ITKIO ITKBasicFilters ITKCommon)
+TARGET_LINK_LIBRARIES(pxstatisticsonimage pxcommon ITKIO ITKBasicFilters ITKCommon ITKStatistics)
 
 INSTALL_TARGETS(/. pxstatisticsonimage)
 
