--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ SUBDIRS(
  imagecompare
  intensitywindowing
  invertintensityimagefilter
+ logicalops
  maximumimagefilter
  minimumimagefilter
  morphologicalclosingimage
