--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,6 +19,7 @@ SUBDIRS(
  createrandomimage
  createsphere
  cropimage
+ deformationfieldgenerator
  deformationfieldoperator
  detectgoldmarkers
  dilateimage
