--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ SUBDIRS(
  computedifferenceimage
  computedifferenceimageBIG
  computedistances
+ computemean
  computeoverlap
  contrastenhanceimage
  countnonzerovoxels
