--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -47,6 +47,7 @@ SUBDIRS(
  rescaleintensityimagefilter
  resizeimage
  scripts
+ segmentationdistance
  statisticsonimage
  tileimages
  thresholdimage
