--- a/src/tileimages/CMakeLists.txt
+++ b/src/tileimages/CMakeLists.txt
@@ -12,7 +12,7 @@ ENDIF(ITK_FOUND)
 
 ADD_EXECUTABLE(pxtileimages tileimages.cxx)
 
-TARGET_LINK_LIBRARIES(pxtileimages ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxtileimages pxcommon ITKIO ITKCommon)
 
 INSTALL_TARGETS(/. pxtileimages)
 
