--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ SUBDIRS(
  createrandomimage
  createsimplebox
  createsphere
+ createzeroimage
  cropimage
  deformationfieldgenerator
  deformationfieldoperator
