--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ SUBDIRS(
  extractslice
  getdicominformation
  getDICOMseriesUIDs
+ getimageinformation
  getpointsinimage
  giplconvert
  histogramequalizeimage
