--- a/src/creategridimage/CMakeLists.txt
+++ b/src/creategridimage/CMakeLists.txt
@@ -14,4 +14,4 @@ ADD_EXECUTABLE(pxcreategridimage creategridimage.cxx)
 
 INSTALL_TARGETS(/. pxcreategridimage)
 
-TARGET_LINK_LIBRARIES(pxcreategridimage ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxcreategridimage pxcommon ITKIO ITKCommon)
