--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ SUBDIRS(
  extracteveryotherslice
  extractindexfromvectorimage
  extractslice
+ fftimage
  gaussianimagefilter
  getdicominformation
  getDICOMseriesUIDs
