--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,7 @@ SUBDIRS(
  histogramequalizeimage
  imagecompare
  imagetovectorimage
+ intensityreplace
  intensitywindowing
  invertintensityimagefilter
  logicalimageoperator
