--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,6 +46,7 @@ SUBDIRS(
  intensityreplace
  intensitywindowing
  invertintensityimagefilter
+ kappastatistic
  logicalimageoperator
  morphologicalclosingimage
  morphologicalopeningimage
