--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -7,9 +7,10 @@ FOREACH(script ${allscripts} )
   GET_FILENAME_COMPONENT(scriptname ${script} NAME)
   STRING(COMPARE NOTEQUAL ${scriptname} "CMakeLists.txt" testvar1)
   STRING(COMPARE NOTEQUAL ${scriptname} "CVS" testvar2)
-  IF( ${testvar1} AND ${testvar2}  )
+  STRING(COMPARE NOTEQUAL ${scriptname} ".svn" testvar3)
+  IF( ${testvar1} AND ${testvar2} AND ${testvar3} )
     INSTALL_PROGRAMS(/. ${scriptname} )
-  ENDIF( ${testvar1} AND ${testvar2}  )
+  ENDIF( ${testvar1} AND ${testvar2} AND ${testvar3} )
 ENDFOREACH(script)
 
 
