--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,6 +52,7 @@ SUBDIRS(
  logicalimageoperator
  morphologicalclosingimage
  morphologicalopeningimage
+ morphology
  pca
  reflect
  replacevoxel
