--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,6 +7,7 @@ SUBDIRS(
  averagevectormagnitude
  binaryimageoperator
  binarythinning
+ braindistance
  castconvert
  closestversor3Dtransform
  combinesegmentations
