--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -52,7 +52,7 @@ SUBDIRS(
  invertintensityimagefilter
  kappastatistic
  logicalimageoperator
- localizedmeanshift
+ #localizedmeanshift
  morphologicalclosingimage
  morphologicalopeningimage
  morphology
