--- a/src/getDICOMseriesUIDs/CMakeLists.txt
+++ b/src/getDICOMseriesUIDs/CMakeLists.txt
@@ -12,7 +12,7 @@ ENDIF(ITK_FOUND)
 
 ADD_EXECUTABLE(pxgetDICOMseriesUIDs getDICOMseriesUIDs.cxx)
 
-TARGET_LINK_LIBRARIES(pxgetDICOMseriesUIDs ITKIO ITKCommon)
+TARGET_LINK_LIBRARIES(pxgetDICOMseriesUIDs pxcommon ITKIO ITKCommon)
 
 INSTALL_TARGETS(/. pxgetDICOMseriesUIDs)
 
