--- a/src/resizeimage/CMakeLists.txt
+++ b/src/resizeimage/CMakeLists.txt
@@ -1,6 +1,12 @@
 # This project is intended to be built outside the Insight source tree
 PROJECT(resizeimage)
 
+# Increases address capacity
+IF ( WIN32 )
+  SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /bigobj")
+  SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /bigobj")
+ENDIF ( WIN32 )
+
 # Find ITK.
 FIND_PACKAGE(ITK)
 IF(ITK_FOUND)
