--- a/src/scripts/CMakeLists.txt
+++ b/src/scripts/CMakeLists.txt
@@ -9,8 +9,8 @@ FOREACH(script ${allscripts} )
   STRING(COMPARE NOTEQUAL ${scriptname} "CVS" testvar2)
   STRING(COMPARE NOTEQUAL ${scriptname} ".svn" testvar3)
   IF( ${testvar1} AND ${testvar2} AND ${testvar3} )
-    INSTALL_PROGRAMS(/. ${scriptname} )
-  ENDIF( ${testvar1} AND ${testvar2} AND ${testvar3} )
+    INSTALL(PROGRAMS ${scriptname} DESTINATION .)
+  ENDIF()
 ENDFOREACH(script)
 
 
